--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@types/react-scroll": "^1.8.6",
     "@typescript-eslint/eslint-plugin": "^5.54.0",
     "@typescript-eslint/parser": "^5.54.0",
+    "autoprefixer": "^10.4.15",
     "babel-loader": "^8.2.3",
     "eslint": "^8.11.0",
     "eslint-config-next": "^13.2.1",
@@ -71,19 +72,17 @@
     "postcss": "^8.4.21",
     "postcss-focus-visible": "^8.0.2",
     "postcss-hexrgba": "^2.1.0",
+    "postcss-nesting": "^12.0.1",
     "postcss-preset-env": "^8.0.1",
-    "postcss-scss": "^4.0.6",
     "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
     "sanity-codegen": "^0.9.8",
-    "sass": "^1.58.3",
     "stylelint": "^14.5.3",
     "stylelint-config-css-modules": "^3.0.0",
     "stylelint-config-standard": "^25.0.0",
     "stylelint-order": "^5.0.0",
-    "tsconfig-paths-webpack-plugin": "^3.5.2",
+    "tailwindcss": "^3.3.3",
     "typescript": "^4.6.2",
-    "webpack": "^5.70.0",
-    "windicss-webpack-plugin": "^1.6.7"
+    "webpack": "^5.88.2"
   }
 }
