--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ package-lock.json
 /gen
 
 # next.js
-/.next
+.next
 /out
 
 # production
@@ -40,3 +40,5 @@ yarn-error.log*
 
 # gitkeep
 !.gitkeep
+
+.sanity
