--- a/package.json
+++ b/package.json
@@ -5,38 +5,39 @@
     "prepare": "is-ci || husky install",
     "build": "npm-run-all --sequential clean generate:* --parallel build:next build:sanity",
     "dev": "npm-run-all --sequential generate:* --parallel dev:*",
-    "start": "npm-run-all --sequential generate:* start:next",
     "clean": "rimraf ./public/studio",
     "generate:sanity": "yarn run sanity-codegen",
     "build:next": "next build --debug",
     "build:sanity": "cd studio && sanity build ../public/studio -y && cd ..",
     "dev:next": "next dev",
-    "dev:sanity": "cp .env ./studio/.env.development && cd studio && sanity start",
-    "start:next": "next start",
-    "postinstall": "lerna bootstrap"
+    "dev:sanity": "cp .env ./studio/.env.development && cd studio && sanity dev"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.11",
     "@iconify/icons-cib": "^1.2.2",
     "@iconify/react": "^3.1.4",
-    "@portabletext/react": "^2.0.0",
-    "@react-hookz/web": "^22.0.0",
-    "@sanity/client": "^3.2.0",
-    "@sanity/image-url": "^1.0.1",
+    "@portabletext/react": "^3.0.7",
+    "@sanity/client": "^6.4.9",
+    "@sanity/icons": "^2.0.0",
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/types": "^3.0.0",
+    "@sanity/ui": "^1.0.0",
     "classnames": "^2.3.1",
-    "cors": "^2.8.5",
     "focus-visible": "^5.2.0",
     "groq": "^2.15.0",
     "lodash": "^4.17.21",
-    "next": "^12.1.0",
-    "next-sanity": "^0.5.1",
-    "next-sanity-image": "^3.2.1",
-    "react": "^18.2.0",
+    "next": "^13.0.0",
+    "next-sanity": "5.5.4",
+    "next-sanity-image": "^6.1.0",
+    "react": "^18.0.0",
     "react-dom": "^18.2.0",
     "react-scroll": "^1.8.9",
     "react-toastify": "^9.1.1",
+    "sanity": "^3.0.0",
     "schema-dts": "^1.1.0",
     "slugify": "^1.6.5",
+    "styled-components": "^6.0.0",
+    "suspend-react": "^0.1.3",
     "swiper": "^9.0.5"
   },
   "devDependencies": {
@@ -51,11 +52,10 @@
     "@sanity/cli": "^2.28.0",
     "@types/cors": "^2.8.12",
     "@types/lodash": "^4.14.179",
-    "@types/node": "^17.0.21",
-    "@types/react": "^18.0.28",
+    "@types/node": "^20.6.2",
+    "@types/react": "^18.2.22",
+    "@types/react-dom": "^18.2.7",
     "@types/react-scroll": "^1.8.6",
-    "@typescript-eslint/eslint-plugin": "^5.54.0",
-    "@typescript-eslint/parser": "^5.54.0",
     "autoprefixer": "^10.4.15",
     "babel-loader": "^8.2.3",
     "eslint": "^8.11.0",
@@ -65,13 +65,12 @@
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^7.0.4",
     "is-ci": "^3.0.1",
-    "jsdom": "^19.0.0",
-    "lerna": "^4.0.0",
     "lint-staged": "^12.3.5",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.21",
+    "postcss": "^8.4.30",
     "postcss-focus-visible": "^8.0.2",
     "postcss-hexrgba": "^2.1.0",
+    "postcss-import": "^15.1.0",
     "postcss-nesting": "^12.0.1",
     "postcss-preset-env": "^8.0.1",
     "prettier": "^2.5.1",
