--- a/studio/package.json
+++ b/studio/package.json
@@ -13,26 +13,28 @@
     "sanity"
   ],
   "dependencies": {
-    "@sanity/base": "^2.30.0",
-    "@sanity/cli": "^2.30.0",
+    "@sanity/cli": "^3.16.7",
     "@sanity/components": "^2.14.0",
-    "@sanity/core": "^2.30.0",
-    "@sanity/default-layout": "^2.30.0",
-    "@sanity/default-login": "^2.30.0",
-    "@sanity/desk-tool": "^2.30.0",
-    "@sanity/eslint-config-studio": "^2.0.1",
-    "@sanity/production-preview": "^2.29.3",
-    "@sanity/vision": "^2.30.0",
-    "eslint": "^8.6.0",
+    "@sanity/eslint-config-studio": "^3.0.1",
+    "@sanity/production-preview": "^2.35.3",
+    "eslint": "^8.49.0",
+    "lodash": "^4.17.21",
     "prop-types": "^15.7",
-    "react": "^17.0",
-    "react-dom": "^17.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.3.1",
-    "sanity-plugin-iframe-pane": "^1.0.15",
-    "sanity-plugin-seo-pane": "^1.3.1",
-    "sanity-plugin-vercel-deploy": "^2.1.6",
+    "sanity": "^3.16.7",
+    "sanity-plugin-seo-pane": "^2.0.1",
+    "sanity-plugin-vercel-deploy": "^3.3.4",
     "slugify": "^1.6.5",
     "styled-components": "^5.2.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@babel/core": "^7.22.20",
+    "@babel/preset-env": "^7.22.20",
+    "@babel/preset-react": "^7.22.15",
+    "@babel/preset-typescript": "^7.22.15",
+    "prettier": "^3.0.3",
+    "typescript": "^5.2.2"
+  }
 }
