--- a/studio/tsconfig.json
+++ b/studio/tsconfig.json
@@ -1,20 +1,19 @@
 {
+  "extends": "../tsconfig.json",
   "compilerOptions": {
-    "target": "ES2017",
-    "lib": ["dom", "dom.iterable", "esnext"],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "noEmit": true,
-    "esModuleInterop": true,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "jsx": "preserve",
-    "incremental": true
+    "baseUrl": ".",
+    "paths": {
+      "@gen/*": ["./gen/*"],
+      "@lib/*": ["./lib/*"],
+      "@components/*": ["../frontend/components/*"],
+      "@/*": ["../*"]
+    }
   },
-  "include": ["**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules"]
+  "include": [
+    "./node_modules/@sanity/base/types/**/*.ts",
+    "../env.d.ts",
+    "./studio.d.ts",
+    "./**/*",
+    "./*.{js,ts,tsx}"
+  ]
 }
