--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@sanity/*": ["./studio/*"],
+      "@studio/*": ["./studio/*"],
       "@gen/*": ["./studio/gen/*"],
       "@lib/*": ["./src/lib/*"],
       "@globals/*": ["./src/globals/*"],
