--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "next-sanity-image": "^6.1.0",
     "react": "^18.0.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.46.2",
     "react-scroll": "^1.8.9",
     "react-toastify": "^9.1.1",
     "sanity": "^3.0.0",
