--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,7 @@
   },
   "editor.formatOnSave": true,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "eslint.workingDirectories": ["./", "./studio"],
+  "eslint.workingDirectories": ["./src", "./studio"],
   "css.validate": false,
   "scss.validate": false,
   "stylelint.enable": true,
