feat: property WIP and started units

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "classnames": "^2.3.1",
     "cors": "^2.8.5",
     "focus-visible": "^5.2.0",
+    "google-map-react": "^2.2.1",
     "groq": "^2.15.0",
     "lodash": "^4.17.21",
     "next": "^13.0.0",
@@ -53,6 +54,7 @@
     "@commitlint/types": "^16.2.1",
     "@sanity/cli": "^2.28.0",
     "@types/cors": "^2.8.12",
+    "@types/google-map-react": "^2.1.8",
     "@types/lodash": "^4.14.179",
     "@types/node": "^20.6.2",
     "@types/react": "^18.2.22",
