--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-hook-form": "^7.46.2",
     "react-scroll": "^1.8.9",
     "react-toastify": "^9.1.1",
+    "react-transition-group": "^4.4.5",
     "sanity": "^3.0.0",
     "schema-dts": "^1.1.0",
     "slugify": "^1.6.5",
@@ -60,6 +61,7 @@
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
     "@types/react-scroll": "^1.8.6",
+    "@types/react-transition-group": "^4.4.7",
     "autoprefixer": "^10.4.15",
     "babel-loader": "^8.2.3",
     "eslint": "^8.11.0",
