--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@sanity/image-url": "^1.0.2",
     "@sanity/types": "^3.0.0",
     "@sanity/ui": "^1.0.0",
+    "axios": "^1.5.1",
     "classnames": "^2.3.1",
     "cors": "^2.8.5",
     "focus-visible": "^5.2.0",
