--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-transition-group": "^4.4.5",
     "sanity": "^3.0.0",
     "schema-dts": "^1.1.0",
+    "sharp": "^0.32.6",
     "slugify": "^1.6.5",
     "styled-components": "^6.0.0",
     "suspend-react": "^0.1.3",
