--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@sanity/table": "^1.0.1",
     "@sanity/types": "^3.0.0",
     "@sanity/ui": "^1.0.0",
+    "animated-scroll-to": "^2.3.0",
     "axios": "^1.5.1",
     "classnames": "^2.3.1",
     "cors": "^2.8.5",
