--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "next-sanity": "5.5.4",
     "next-sanity-image": "^6.1.0",
     "react": "^18.0.0",
+    "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.2",
     "react-scroll": "^1.8.9",
