--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "next": "^13.0.0",
     "next-sanity": "5.5.4",
     "next-sanity-image": "^6.1.0",
+    "photoswipe": "^5.4.2",
     "react": "^18.0.0",
     "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
