--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@sanity/types": "^3.0.0",
     "@sanity/ui": "^1.0.0",
     "@studio-freight/react-lenis": "^0.0.38",
+    "all": "^0.0.0",
     "axios": "^1.5.1",
     "classnames": "^2.3.1",
     "cors": "^2.8.5",
