--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "build:next": "next build --debug",
     "build:sanity": "cd studio && sanity build ../public/studio -y && cd ..",
     "dev:next": "next dev",
-    "dev:sanity": "cp .env ./studio/.env.development && cd studio && sanity dev"
+    "dev:sanity": "cp .env ./studio/.env.development && cd studio && sanity dev",
+    "test": "playwright test",
+    "test:ui": "playwright test --ui",
+    "test:report": "playwright show-report",
+    "test:codegen": "playwright codegen home0001.com"
   },
   "dependencies": {
     "@chakra-ui/next-js": "^2.1.5",
@@ -33,6 +37,7 @@
     "axios": "^1.5.1",
     "classnames": "^2.3.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "focus-visible": "^5.2.0",
     "framer-motion": "^10.16.4",
     "google-map-react": "^2.2.1",
@@ -66,6 +71,7 @@
     "@commitlint/cli": "^16.2.1",
     "@commitlint/config-conventional": "^16.2.1",
     "@commitlint/types": "^16.2.1",
+    "@playwright/test": "^1.42.1",
     "@sanity/cli": "^2.28.0",
     "@types/cors": "^2.8.12",
     "@types/google-map-react": "^2.1.8",
