feat: vercel redirect

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,16 @@
 {
   "rewrites": [
-    { "source": "/studio/(.*)", "destination": "/studio/index.html" }
+    { "source": "/studio/(.*)", "destination": "/studio/index.html" },
+    {
+      "source": "/:path*",
+      "has": [
+        {
+          "type": "host",
+          "value": "earth.net"
+        }
+      ],
+      "destination": "/brand/:path*"
+    }
   ],
   "redirects": [
     {
