--- a/package.json
+++ b/package.json
@@ -29,15 +29,18 @@
     "@sanity/types": "^3.0.0",
     "@sanity/ui": "^1.0.0",
     "@studio-freight/react-lenis": "^0.0.43",
+    "@twilio/conversations": "^2.5.0",
     "all": "^0.0.0",
     "axios": "^1.5.1",
     "classnames": "^2.3.1",
     "cors": "^2.8.5",
     "focus-visible": "^5.2.0",
     "framer-motion": "^10.16.4",
+    "fs": "^0.0.1-security",
     "google-map-react": "^2.2.1",
     "groq": "^2.15.0",
     "lodash": "^4.17.21",
+    "net": "^1.0.2",
     "next": "^13.0.0",
     "next-sanity": "5.5.4",
     "next-sanity-image": "^6.1.0",
@@ -55,7 +58,9 @@
     "slugify": "^1.6.5",
     "styled-components": "^6.0.0",
     "suspend-react": "^0.1.3",
-    "swiper": "^9.0.5"
+    "swiper": "^9.0.5",
+    "tls": "^0.0.1",
+    "twilio": "^5.0.3"
   },
   "devDependencies": {
     "@asbjorn/eslint-plugin-groq": "^2.0.0",
