feat: removed earth redirect

--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,6 @@
 {
   "rewrites": [
-    { "source": "/studio/(.*)", "destination": "/studio/index.html" },
-    {
-      "source": "/:path*",
-      "has": [
-        {
-          "type": "host",
-          "value": "earth.net"
-        }
-      ],
-      "destination": "/brand/:path*"
-    }
+    { "source": "/studio/(.*)", "destination": "/studio/index.html" }
   ],
   "redirects": [
     {
