--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "build:next": "next build --debug",
     "build:sanity": "cd studio && sanity build ../public/studio -y && cd ..",
     "dev:next": "next dev",
-    "dev:sanity": "cp .env ./studio/.env.development && cd studio && sanity dev"
+    "dev:sanity": "cp .env ./studio/.env.development && cd studio && sanity dev",
+    "format": "prettier --write .",
+    "ngrok": "ngrok http 3000"
   },
   "dependencies": {
     "@chakra-ui/next-js": "^2.1.5",
