--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@twilio/conversations": "^2.5.0",
     "all": "^0.0.0",
     "axios": "^1.5.1",
+    "body-parser": "^1.20.2",
     "classnames": "^2.3.1",
     "cors": "^2.8.5",
     "firebase": "^10.12.2",
@@ -60,6 +61,7 @@
     "schema-dts": "^1.1.0",
     "sharp": "^0.32.6",
     "slugify": "^1.6.5",
+    "stripe": "^15.9.0",
     "styled-components": "^6.0.0",
     "suspend-react": "^0.1.3",
     "swiper": "^9.0.5",
