--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "framer-motion": "^10.16.4",
     "fs": "^0.0.1-security",
     "google-map-react": "^2.2.1",
+    "googleapis": "^139.0.0",
     "groq": "^2.15.0",
     "lodash": "^4.17.21",
     "net": "^1.0.2",
@@ -66,6 +67,7 @@
     "suspend-react": "^0.1.3",
     "swiper": "^9.0.5",
     "tls": "^0.0.1",
+    "ts-luxon": "^5.0.2",
     "twilio": "^5.0.3"
   },
   "devDependencies": {
