--- a/vercel.json
+++ b/vercel.json
@@ -6,10 +6,10 @@
       "has": [
         {
           "type": "host",
-          "value": "earth.net"
+          "value": "buy.home0001.com"
         }
       ],
-      "destination": "/brand/:path*"
+      "destination": "/buy/:path*"
     }
   ],
   "redirects": [
