test: vercel config

--- a/vercel.json
+++ b/vercel.json
@@ -10,6 +10,16 @@
         }
       ],
       "destination": "/buy/:path*"
+    },
+    {
+      "source": "/api/(.*)",
+      "has": [
+        {
+          "type": "host",
+          "value": "buy.home0001.com"
+        }
+      ],
+      "destination": "/api/(.*)"
     }
   ],
   "redirects": [
