--- a/.eslintrc
+++ b/.eslintrc
@@ -16,62 +16,96 @@
     "plugin:prettier/recommended",
     "prettier"
   ],
-  "plugins": ["@asbjorn/groq", "prettier"],
+  "plugins": [
+    "@asbjorn/groq",
+    "prettier"
+  ],
   "rules": {
     "no-process-env": "off",
     "no-shadow": "off",
-    "no-console": "warn",
+    "no-console": [
+      "error",
+      {
+        "allow": [
+          "warn",
+          "error"
+        ]
+      }
+    ],
     "no-warning-comments": [
-      "error",
-      {
-        "terms": ["fix"]
-      }
-    ],
-    "import/no-unresolved": [
-      "error",
-      {
-        "ignore": ["^(all|part):"]
-      }
-    ],
-    "jsx-a11y/media-has-caption": "warn",
-    "jsx-a11y/anchor-is-valid": [
-      "error",
-      {
-        "components": ["Link", "NextLink"]
-      }
-    ],
-    "react/prop-types": "off",
-    "react/display-name": "off",
-    "@asbjorn/groq/no-template-expressions": "off"
-  },
-  "settings": {
-    "import/parsers": {
-      "@typescript-eslint/parser": [".ts", ".tsx"]
-    },
-    "import/resolver": {
-      "node": {
-        "include": ["node_modules"],
-        "extensions": [".ts", ".tsx", ".js", ".jsx", ".json"]
-      },
-      "typescript": {
-        "alwaysTryTypes": true,
-        "project": ["./", "./studio"]
-      }
-    },
-    "import/core-modules": [
-      "swiper/css",
-      "swiper/css/navigation",
-      "swiper/css/pagination",
-      "swiper/css/virtual",
-      "swiper/react"
+    "error",
+    {
+      "terms": [
+        "fix"
+      ]
+    }
+  ],
+  "import/no-unresolved": [
+    "error",
+    {
+      "ignore": [
+        "^(all|part):"
+      ]
+    }
+  ],
+  "jsx-a11y/media-has-caption": "warn",
+  "jsx-a11y/anchor-is-valid": [
+    "error",
+    {
+      "components": [
+        "Link",
+        "NextLink"
+      ]
+    }
+  ],
+  "react/prop-types": "off",
+  "react/display-name": "off",
+  "@asbjorn/groq/no-template-expressions": "off"
+},
+"settings": {
+  "import/parsers": {
+    "@typescript-eslint/parser": [
+      ".ts",
+      ".tsx"
     ]
   },
-  "overrides": [
-    {
-      "files": ["studio/**/*.ts"],
-      "rules": {
-        "import/no-anonymous-default-export": "off"
-      }
+  "import/resolver": {
+    "node": {
+      "include": [
+        "node_modules"
+      ],
+      "extensions": [
+        ".ts",
+        ".tsx",
+        ".js",
+        ".jsx",
+        ".json"
+      ]
+    },
+    "typescript": {
+      "alwaysTryTypes": true,
+      "project": [
+        "./",
+        "./studio"
+      ]
     }
+  },
+  "import/core-modules": [
+    "swiper/css",
+    "swiper/css/navigation",
+    "swiper/css/pagination",
+    "swiper/css/virtual",
+    "swiper/react"
   ]
+},
+"overrides": [
+  {
+    "files": [
+      "studio/**/*.ts"
+    ],
+    "rules": {
+      "import/no-anonymous-default-export": "off"
+    }
+  }
+]
 }
