--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@stripe/stripe-js": "^3.5.0",
     "@studio-freight/react-lenis": "^0.0.43",
     "@twilio/conversations": "^2.5.0",
+    "@vercel/analytics": "^1.3.1",
     "all": "^0.0.0",
     "axios": "^1.5.1",
     "body-parser": "^1.20.2",
