--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.2",
+    "react-phone-number-input": "^3.4.4",
     "react-scroll": "^1.8.9",
     "react-toastify": "^9.1.1",
     "react-transition-group": "^4.4.5",
