--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
     "hookform",
     "Hubspot",
     "hutk",
+    "SENDGRID",
     "serializers"
   ],
   "editor.codeActionsOnSave": {
@@ -12,11 +13,18 @@
   },
   "editor.formatOnSave": true,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "eslint.workingDirectories": ["./src", "./studio"],
+  "eslint.workingDirectories": [
+    "./src",
+    "./studio"
+  ],
   "css.validate": false,
   "scss.validate": false,
   "stylelint.enable": true,
-  "stylelint.validate": ["css", "postcss", "scss"],
+  "stylelint.validate": [
+    "css",
+    "postcss",
+    "scss"
+  ],
   "stylelint.stylelintPath": "node_modules/stylelint/lib",
   "prettier.enable": true,
   "[javascript]": {
