--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "photoswipe": "^5.4.2",
     "react": "^18.0.0",
     "react-cookie": "^6.1.1",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.2",
     "react-phone-number-input": "^3.4.4",
