--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "stripe": "^15.9.0",
     "styled-components": "^6.0.0",
     "suspend-react": "^0.1.3",
-    "swiper": "^9.0.5",
+    "swiper": "11.1.14",
     "tls": "^0.0.1",
     "ts-luxon": "^5.0.2",
     "twilio": "^5.0.3"
