--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "next-sanity": "5.5.4",
     "next-sanity-image": "^6.1.0",
     "photoswipe": "^5.4.2",
+    "posthog-js": "^1.174.3",
     "react": "^18.0.0",
     "react-cookie": "^6.1.1",
     "react-device-detect": "^2.2.3",
