feat: phone validation for new form

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,7 +13,8 @@
     "singlesends",
     "Timelinedec",
     "waitlist",
-    "ydouble"
+    "ydouble",
+    "yhalf"
   ],
   "editor.codeActionsOnSave": {
     "source.fixAll": "explicit"
