feat: save register endpoint

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,14 @@
 {
   "cSpell.words": [
     "buyingtimelinedec",
+    "CDMX",
     "Firestore",
     "groq",
     "hookform",
     "Hubspot",
     "hutk",
     "livechat",
+    "notsure",
     "Referers",
     "ROCKETCHAT",
     "SENDGRID",
