--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "@commitlint/config-conventional": "^16.2.1",
     "@commitlint/types": "^16.2.1",
     "@sanity/cli": "^2.28.0",
+    "@types/classnames": "^2.3.4",
     "@types/cors": "^2.8.12",
     "@types/google-map-react": "^2.1.8",
     "@types/lodash": "^4.14.179",
