--- a/package.json
+++ b/package.json
@@ -53,8 +53,8 @@
     "lodash": "^4.17.21",
     "moment-timezone": "^0.5.45",
     "net": "^1.0.2",
-    "next": "^13.0.0",
-    "next-sanity": "5.5.4",
+    "next": "^14.0.0",
+    "next-sanity": "^6.0.0",
     "next-sanity-image": "^6.1.0",
     "photoswipe": "^5.4.2",
     "posthog-js": "^1.174.3",
