--- a/studio/package.json
+++ b/studio/package.json
@@ -14,6 +14,7 @@
   ],
   "dependencies": {
     "@sanity/cli": "^3.16.7",
+    "@sanity/client": "^6.22.5",
     "@sanity/components": "^2.14.0",
     "@sanity/eslint-config-studio": "^3.0.1",
     "@sanity/production-preview": "^2.35.3",
