--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "buyingtimelinedec",
     "CDMX",
     "Firestore",
+    "greenpoint",
     "groq",
     "hookform",
     "Hubspot",
@@ -14,6 +15,7 @@
     "SENDGRID",
     "serializers",
     "singlesends",
+    "stuy",
     "Timelinedec",
     "waitlist",
     "Yanny",
