--- a/package.json
+++ b/package.json
@@ -77,7 +77,9 @@
     "swiper": "11.1.14",
     "tls": "^0.0.1",
     "ts-luxon": "^5.0.2",
-    "twilio": "^5.0.3"
+    "twilio": "^5.0.3",
+    "undici": "^7.6.0",
+    "viem": "^2.24.3"
   },
   "devDependencies": {
     "@asbjorn/eslint-plugin-groq": "^2.0.0",
