--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.2",
+    "react-icons": "^5.5.0",
     "react-phone-number-input": "^3.4.4",
     "react-scroll": "^1.8.9",
     "react-toastify": "^9.1.1",
