--- a/vercel.json
+++ b/vercel.json
@@ -9,10 +9,15 @@
   ],
   "redirects": [
     {
-      "source": "/:path*",
-      "has": [{ "type": "host", "value": "dashboard.home0001.com" }],
-      "destination": "https://www.home0001.com/dashboard/:path*",
-      "permanent": false
+      "source": "/(.*)",
+      "has": [
+        {
+          "type": "host",
+          "value": "dashboard.home0001.com"
+        }
+      ],
+      "destination": "https://home0001.com/dashboard/$1",
+      "permanent": true
     },
     {
       "source": "/echo-park",
