--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@studio-freight/react-lenis": "^0.0.43",
     "@twilio/conversations": "^2.5.0",
     "@vercel/analytics": "^1.3.1",
+    "@welldone-software/why-did-you-render": "^10.0.1",
     "all": "^0.0.0",
     "axios": "^1.5.1",
     "bitpay-sdk": "^7.0.0",
