--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@iconify/icons-cib": "^1.2.2",
     "@iconify/react": "^3.1.4",
     "@portabletext/react": "^3.0.7",
+    "@radix-ui/react-slot": "^1.2.3",
     "@sanity/client": "^6.22.5",
     "@sanity/icons": "^2.0.0",
     "@sanity/image-url": "^1.0.2",
@@ -46,6 +47,7 @@
     "axios": "^1.5.1",
     "bitpay-sdk": "^7.0.0",
     "body-parser": "^1.20.2",
+    "class-variance-authority": "^0.7.1",
     "classnames": "^2.3.1",
     "cors": "^2.8.5",
     "firebase": "^10.12.2",
@@ -58,6 +60,7 @@
     "googleapis": "^139.0.0",
     "groq": "^2.15.0",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.525.0",
     "moment-timezone": "^0.5.45",
     "net": "^1.0.2",
     "next": "^14.2.18",
@@ -67,6 +70,7 @@
     "posthog-js": "latest",
     "react": "^18.0.0",
     "react-cookie": "^6.1.1",
+    "react-day-picker": "8.10.1",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.2",
@@ -83,6 +87,7 @@
     "styled-components": "^6.1.0",
     "suspend-react": "^0.1.3",
     "swiper": "11.1.14",
+    "tailwind-merge": "^3.3.1",
     "tls": "^0.0.1",
     "ts-luxon": "^5.0.2",
     "tsx": "^4.20.1",
